Update to leverage read-only model properties
